--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"bcrypt": "^6.0.0",
 		"chalk": "^5.6.2",
+		"dotenv": "^17.2.3",
 		"express": "^5.1.0",
 		"express-session": "^1.18.2",
 		"mysql2": "^3.15.3",
